<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="subject_letter">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_letter">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="course_android_development">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="my_email">val2567@yandex.ru</string>
    <string name="artist">No name artist</string>
    <string name="track_time">00:00</string>
    <string name="track_title">No Raply</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="style">Жанр</string>
    <string name="country">Страна</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet_connection"> Проблемы со связью \n\ \n\ Загрузка не удалась.Проверьте \n\ подключение к интернету</string>
    <string name="repeat">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
</resources>