<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
 dev
    style="@style/homeScreen">

 master

    <TextView
        android:text="@string/app_name"
 dev
        style="@style/playlistMakerStyle" />

    <Button
        android:id="@+id/searchButton"

 master
        android:text="@string/search"
        app:icon="@drawable/icon_search"
        style="@style/bigButton" />

    <Button
 dev
        android:id="@+id/mediatekaButton"

 master
        android:text="@string/media_library"
        app:icon="@drawable/icon_media"
        style="@style/bigButton" />

    <Button
 dev
        android:id="@+id/settingsButton"
        style="@style/bigButton"

 master
        android:text="@string/settings"
        app:icon="@drawable/icon_settings" />

</LinearLayout>