<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/linearVerticalStyle">

    <LinearLayout
        style="@style/linearHorizontalStyle">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/settings"
            style="@style/toolbarSettingsStyle" />
    </LinearLayout>

    <LinearLayout
        style="@style/linearHorizontalStyle"
        android:layout_marginTop="8dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_marginHorizontal="16dp"
            android:text="@string/dark_theme"
            style="@style/settingsButton" />

    </LinearLayout>

    <Button
        android:id="@+id/share"
        android:text="@string/share_the_app"
        app:icon="@drawable/icon_share"
        style="@style/settingsButton" />

    <Button
        android:id="@+id/group"
        android:text="@string/write_to_support"
        app:icon="@drawable/icon_group"
        style="@style/settingsButton" />

    <Button
        android:id="@+id/agreement"
        android:text="@string/user_agreement"
        app:icon="@drawable/icon_agreement"
        style="@style/settingsButton" />

</LinearLayout>