<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/artwork"
        app:shapeAppearanceOverlay="@style/ImageViewShape"
        android:src="@drawable/icon_placeholder"
        style="@style/placeholderStyle" />

    <LinearLayout style="@style/linearTrackItemsStyle">

        <TextView
            android:id="@+id/trackName"
            android:text="@string/track_title"
            style="@style/trackTitleStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistName"
                app:maxLines="1"
                android:text="@string/artist"
                style="@style/artistStyle" />

            <TextView
                android:id="@+id/trackTime"
                app:maxLines="1"
                android:text="@string/track_time"
                style="@style/ellipseStyle"
                app:drawableStartCompat="@drawable/icon_ellipse" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/searchArrow"
        android:src="@drawable/icon_arrow_forward"
        style="@style/arrowForwardStyle" />

</LinearLayout>